--- a/package.json
+++ b/package.json
@@ -11,15 +11,21 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
     "bootstrap": "^4.6.0",
+    "bootstrap-icons": "^1.7.1",
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.15.1",
     "eslint-plugin-prettier": "^4.0.0",
-    "nuxt": "^2.15.7"
+    "nuxt": "^2.15.7",
+    "swiper": "^7.3.1",
+    "tailwindcss": "^2.2.19",
+    "vue-awesome-swiper": "^4.1.1"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^6.0.0",
     "@nuxtjs/eslint-module": "^3.0.2",
     "@nuxtjs/moment": "^1.6.1",
+    "@nuxtjs/tailwindcss": "^4.2.1",
+    "autoprefixer": "^10.4.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^7.22.0",
     "eslint-config-prettier": "^8.3.0",
@@ -27,6 +33,7 @@
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^7.7.0",
     "node-sass": "^4.14.1",
+    "postcss": "^8.4.4",
     "prettier": "^2.3.2",
     "pug": "^3.0.0",
     "pug-plain-loader": "^1.0.0",
