--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "@nuxt/content": "^1.15.1",
     "@nuxtjs/axios": "^5.13.6",
     "bootstrap": "^4.6.0",
     "bootstrap-icons": "^1.7.1",
@@ -16,6 +17,8 @@
     "core-js": "^3.15.1",
     "eslint-plugin-prettier": "^4.0.0",
     "nuxt": "^2.15.7",
+    "sass": "^1.45.0",
+    "smoothscroll-polyfill": "^0.4.4",
     "swiper": "^7.3.1",
     "tailwindcss": "^2.2.19",
     "vue-awesome-swiper": "^4.1.1"
@@ -32,7 +35,6 @@
     "eslint-plugin-nuxt": "^2.0.0",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^7.7.0",
-    "node-sass": "^4.14.1",
     "postcss": "^8.4.4",
     "prettier": "^2.3.2",
     "pug": "^3.0.0",
