--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.15.1",
     "eslint-plugin-prettier": "^4.0.0",
+    "lodash": "^4.17.21",
     "nuxt": "^2.15.7",
     "sass": "^1.45.0",
     "smoothscroll-polyfill": "^0.4.4",
     "swiper": "^7.3.1",
     "tailwindcss": "^2.2.19",
-    "vue-awesome-swiper": "^4.1.1"
+    "vue-awesome-swiper": "^4.1.1",
+    "vue-lodash": "^2.1.2"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^6.0.0",
