--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "core-js": "^3.15.1",
     "eslint-plugin-prettier": "^4.0.0",
     "lodash": "^4.17.21",
+    "mapbox-gl": "^2.8.1",
     "nuxt": "^2.15.7",
     "sass": "^1.45.0",
     "smoothscroll-polyfill": "^0.4.4",
